--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class="my-4">Counter</h1>
       <span class="" id="counter">0</span>
      <div class="counter-btn my-4 d-flex">
-      <button class="btn btn-outline-dark  py-2 px-4 mx-2 " id="Decrease">Decrease</button>
-      <button class="btn btn-outline-dark  py-2 px-4 mx-2" id="Reset">Reset</button>
-      <button class="btn btn-outline-dark  py-2 px-4 mx-2" id="Increase">Increase</button>
+      <button class="btn btn-outline-dark  py-2 px-4 mx-2 fs-3" id="Decrease">Decrease</button>
+      <button class="btn btn-outline-dark  py-2 px-4 mx-2 fs-3" id="Reset">Reset</button>
+      <button class="btn btn-outline-dark  py-2 px-4 mx-2 fs-3" id="Increase">Increase</button>
      </div>
      </div>
     </div>
